create github pages

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         DES MILLIERS DE JOUEURS S’AFFRONTENT SANS ARRÊT SUR NOS SERVEURS. 
                 </p>
                 <div class="mbr-media show-modal align-center py-2" data-modal=".modalWindow">
-                         <a href="http://www.mb103.com/lnk.asp?o=9465&c=918271&a=303398&l=8995"><span class="mbr-iconfont mbri-play"></span></a>
+                         <a href="http://www.mb103.com/lnk.asp?o=9465&c=918271&a=303398&l=8995"><span class="mbr-iconfont mbri-play" style=""></span></a>
                 </div>
                 <div class="icon-description align-center font-italic pb-3 mbr-fonts-style display-7"></div>
                 <div class="mbr-section-btn text-center"><a class="btn btn-md btn-primary display-4" href="http://www.mb103.com/lnk.asp?o=9465&c=918271&a=303398&l=8995">REJOIGNEZ-NOUS GRATUITEMENT</a></div>
@@ -60,7 +60,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/k">develop free website</a></section><section class="header7 cid-qNa53OWKIE" id="header7-l">
+<section class="engine"><a href="https://mobirise.ws/n">best website builder app</a></section><section class="header7 cid-qNa53OWKIE" id="header7-l">
 
     
 
