--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   
 </head>
 <body>
-  <section class="header8 cid-qNa4ZyvOws mbr-fullscreen mbr-parallax-background" id="header8-k">
+  <section class="header8 cid-qNag5K0EPK mbr-fullscreen mbr-parallax-background" id="header8-h">
 
     
 
@@ -31,9 +31,8 @@
     <div class="container align-center">
         <div class="row justify-content-md-center">
             <div class="mbr-white col-md-10">
-                <h1 class="mbr-section-title align-center py-2 mbr-bold mbr-fonts-style display-2">Le plus célèbre jeu par navigateur de l`univers ! &nbsp;</h1>
-                <p class="mbr-text align-center py-2 mbr-fonts-style display-5">
-                        DES MILLIERS DE JOUEURS S’AFFRONTENT SANS ARRÊT SUR NOS SERVEURS. 
+                <h1 class="mbr-section-title align-center py-2 mbr-bold mbr-fonts-style display-2">À la conquête de l`univers</h1>
+                <p class="mbr-text align-center py-2 mbr-fonts-style display-5">Le meilleur jeu de stratégie dans l'espace. Des milliers de joueurs s'affrontent sans arrêt sur nos serveurs. Pour jouer, il vous suffit d'avoir un navigateur Internet. 
                 </p>
                 <div class="mbr-media show-modal align-center py-2" data-modal=".modalWindow">
                          <a href="http://www.mb103.com/lnk.asp?o=9465&c=918271&a=303398&l=8995"><span class="mbr-iconfont mbri-play" style=""></span></a>
@@ -60,7 +59,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/n">best website builder app</a></section><section class="header7 cid-qNa53OWKIE" id="header7-l">
+<section class="engine"><a href="https://mobirise.ws/l">free html website creator</a></section><section class="header7 cid-qNaguqVAWO" id="header7-j">
 
     
 
@@ -70,11 +69,11 @@
         <div class="media-container-row">
 
             <div class="media-content align-right">
-                <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-2">Devenez le maître incontesté de l'univers!<br></h1>
+                <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-5">Créez votre empire dans l`espace</h1>
                 <div class="mbr-section-text mbr-white pb-3">
-                    <p class="mbr-text mbr-fonts-style display-7">Devenez le maître incontesté de l'univers!<br>-Bâtissez une infrastructure économique et militaire.<br>-Livrez bataille pour remporter de précieuses ressources .<br>-Armez votre flotte et renforcez votre pouvoir.<br>-Exploitez des ressources ou pillez celles d`autres joueurs.&nbsp;<br>-Commercez avec des peuples pacifiques .<br>-Forgez des alliances et joignez vos forces pour attaquer d`autres planètes.<br></p>
+                    <p class="mbr-text mbr-fonts-style display-7">-Bâtissez une infrastructure économique et militaire.<br>-Livrez bataille pour remporter de précieuses ressources .<br>-Armez votre flotte et renforcez votre pouvoir .<br>-Exploitez des ressources ou pillez celles d`autres joueurs .<br>-Commercez avec des peuples pacifiques .<br>-Forgez des alliances et joignez vos forces pour attaquer d`autres planètes.</p>
                 </div>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-4" href="http://www.mb103.com/lnk.asp?o=9465&c=918271&a=303398&l=8995">REJOIGNEZ-NOUS</a></div>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-4" href="http://www.mb103.com/lnk.asp?o=9465&c=918271&a=303398&l=8995">REJOIGNEZ-NOUS GRATUITEMENT</a></div>
             </div>
 
             <div class="mbr-figure" style="width: 100%;"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/220QF3BO4f0?rel=0&amp;amp;showinfo=0&amp;autoplay=1&amp;loop=0" width="800" height="600" frameborder="0" allowfullscreen></iframe></div>
